# Multicamera-vehicle-tracking-system-

./: Notes.txt  README.md  UpdateHistBase.py  file_management.py  glowny.py  hist.py  prb.py  prepare_data.py  sledzenie.ipynb
Communication_client/: CMakeCache.txt  CMakeLists.txt  Inzynierka  Makefile  README.txt  TXT_Sender.cpp  cmake_install.cmake  main.cpp  main_functions.hpp  sended_struct.cpp  sended_struct.hpp
Communication_server/: CMakeCache.txt  CMakeLists.txt  Inzynierka  Makefile  README.txt  Sended_struct.cpp  Sended_struct.hpp  TXT_Sender.cpp  TXT_Sender.hpp  cmake_install.cmake  main.cpp  main_functions.hpp
Hists/: auto_0.csv  auto_1.csv  auto_2.csv  db1.csv  db2.csv  db3.csv
Recived_txt/: PD_10.csv  PD_102.csv  PD_105.csv  PD_109.csv  PD_110.csv  PD_111.csv  PD_112.csv  PD_114.csv  PD_118.csv  PD_123.csv  PD_125.csv  PD_131.csv  PD_132.csv  PD_136.csv  PD_143.csv  PD_145.csv  PD_148.csv  PD_149.csv  PD_15.csv  PD_150.csv  PD_154.csv  PD_155.csv  PD_157.csv  PD_161.csv  PD_164.csv  PD_169.csv  PD_170.csv  PD_171.csv  PD_179.csv  PD_18.csv  PD_181.csv  PD_184.csv  PD_185.csv  PD_188.csv  PD_189.csv  PD_190.csv  PD_192.csv  PD_195.csv  PD_196.csv  PD_199.csv  (+27 more)
Sended_txt/: PD_1.csv  PD_1.txt  PD_100.csv  PD_101.csv  PD_103.csv  PD_104.csv  PD_106.csv  PD_107.csv  PD_108.csv  PD_11.csv  PD_113.csv  PD_115.csv  PD_116.csv  PD_117.csv  PD_119.csv  PD_12.csv  PD_120.csv  PD_121.csv  PD_122.csv  PD_124.csv  PD_126.csv  PD_127.csv  PD_128.csv  PD_129.csv  PD_13.csv  PD_130.csv  PD_133.csv  PD_134.csv  PD_135.csv  PD_137.csv  PD_138.csv  PD_139.csv  PD_14.csv  (+106 more)
(+29 files in other folders)
